# ArOgre

./: AUTHORS  CMakeLists.txt  ChangeLog  README.md
media/: arogre.cfg  resources.cfg
media/aruco/: camera.yml  copia de camera.yml  video.webm
media/materials/scripts/: ArShadow.material  Barrel.material  Boat.material  Button.material  Canister.material  Chair_1.material  Column.material  Crystal.material  Cube.material  Examples-Water.material  Examples.material  Grass.material  Ground.material  Ocean.material  Plane.material  Road.material  Selector.material  Sofa_1.material  Sofa_2.material  SolarSystem.material  Spitfire.material  Statue.material
media/materials/textures/: Leather_Chair_D.tga  barrel_mat1_d.dds  barrel_mat2_d.dds  canister_d.dds
media/models/: Sinbad.mesh  Sword.mesh  mesh_airplaneB.mesh  mesh_airplaneP.mesh  mesh_barrel.mesh  mesh_boat.mesh  mesh_button.mesh  mesh_canister.mesh  mesh_chair_1.mesh  mesh_column.mesh  mesh_crystal.mesh  mesh_cube.mesh  mesh_grass.mesh  mesh_pairs.mesh  mesh_plane.mesh  mesh_rings.mesh  mesh_sofa_1.mesh  mesh_sofa_2.mesh  mesh_sphere.mesh  mesh_sphere_2.mesh  mesh_statue.mesh
media/particle/: Examples.particle  emitted_emitter.particle  smoke.particle
src/: ArBackground.cpp  ArBackground.h  ArBaseApplication.cpp  ArBaseApplication.h  ArCamera.cpp  ArCamera.h  ArCapturer.cpp  ArCapturer.h  ArConfig.cpp  ArConfig.h  ArDetector.cpp  ArDetector.h  ArModel.cpp  ArModel.h  CMakeLists.txt  PCH.h
utils/: CMakeLists.txt  TestAnimation.cpp  TestAnimation.h  TestBoardControl.cpp  TestBoardControl.h  TestDetection.cpp  TestDetection.h  TestDisplay.cpp  TestDisplay.h  TestGame.cpp  TestGame.h  TestLights.cpp  TestLights.h  TestPairs.cpp  TestPairs.h  TestParticles.cpp  TestParticles.h  TestSolarSystem.cpp  TestSolarSystem.h
